# semantic-segmentation

./: LICENSE  README.md  app.py  app_2.py  pyproject.toml  test.ipynb  test.py
script/: setup.sh  train.sh
src/neopolyp/dataset/: __init__.py  augment.py  coco_utils.py  custom_dataset.py  data.py  data_utils.py  dataset.py  transform.py  transforms.py
src/neopolyp/model/: __init__.py  deeplabv3_plus.py  loss.py  model.py  psp_net.py  resunet.py  seg_net.py  unet.py
src/neopolyp/train/: __main__.py
src/segmentation/dataset/: coco_utils.py  transforms.py
src/segmentation/model/: deeplabv3_plus.py  model.py  segnet.py  unet.py
src/segmentation/train/: __main__.py
src/segmentation/util/: misc.py
