[project]
name = "coco-segmentation"
authors = [{name = "cristiano2003", email = "nguyentrungtruc2003@gmail.com"}]
version = "1.0.0"
requires-python = ">=3.9"
dependencies = [
    "torch",
    "torchvision",
    "torchaudio",
    "opencv-python",
    "lightning",
    "torchsummary",
    "albumentations",
    "pycocotools",
    "gradio"
]

[project.optional-dependencies]
dev = [
    "pytest"
]